Remove half of forbidden commands

--- a/settings.json
+++ b/settings.json
@@ -2,5 +2,5 @@
     "token": "[YOUR BOT TOKEN]",
     "adminID": "[YOUR USER ID]",
     "adminOnly": false,
-    "forbiddencmds": ["node", "pm2", "while", "eval", "fg", "sudo", "kill", ":(){:|:&};:", "dd", "pkill", "bg", "at", "atq", "awk", "batch", "alias", "unalias", "ls", "cat", "cp", "mv", "chmod"]
+    "forbiddencmds": ["node", "pm2", "while", "eval", "fg", "sudo", "kill", ":(){:|:&};:", "dd", "pkill"]
 }
