--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
   "name": "discord-bash",
-  "version": "1.0.0",
-  "description": "A stable version of Discord-Bash",
+  "version": "2.0.0",
+  "description": "Attempt to import bash shell into Discord",
   "main": "index.js",
-  "author": "Cyber#7159",
-  "license": "ISC",
-  "dependencies": {
-    "discord.js": "^12.3.1"
-  },
-  "scripts": {
-    "start": "node index.js"
-  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/CyberL1/Discord-Bash.git"
+    "url": "git+https://github.com/cyberl1/discord-bash.git"
   },
+  "author": "Cyber",
+  "license": "ISC",
   "bugs": {
-    "url": "https://github.com/CyberL1/Discord-Bash/issues"
+    "url": "https://github.com/cyberl1/discord-bash/issues"
   },
-  "homepage": "https://github.com/CyberL1/Discord-Bash#readme"
+  "homepage": "https://github.com/cyberl1/discord-bash#readme",
+  "dependencies": {
+    "argparse": "^2.0.1",
+    "discord.js": "^12.5.3"
+  }
 }
