Add bot token placeholder

--- a/settings.json
+++ b/settings.json
@@ -1,4 +1,4 @@
 {
-    "token": "ODI5OTc3MDI5NTc5NTA1Njc0.YG_-WA.fsho62vOwgkm9zwjEByeEwhbN-o",
+    "token": "[BOT TOKEN HERE]",
     "prefix": "db#"
 }
