--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/CyberL1/Discord-Bash#readme",
   "dependencies": {
+    "decompress": "^4.2.1",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5"
   },
