feat: add webserver for too long outputs

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
+# Discord Bot
+
 BOT_TOKEN=""
 CLIENT_ID=""
+
+# Webserver
+
+WEBSERVER_HOST="localhost"
+WEBSERVER_PORT="3000"
+WEBSERVER_URL="http://localhost:3000" # Optional
