--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node --experimental-strip-types .",
-    "deploy": "node src/bot/deploy"
+    "deploy": "node --experimental-strip-types src/bot/deploy.ts"
   },
   "repository": {
     "type": "git",
